--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.12.1",
+    "@nuxtjs/color-mode": "^3.3.3",
     "nuxt": "^3.11.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.11.4"
   }
 }
