--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "nuxt preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.19",
     "@nuxt/content": "^2.12.1",
     "@nuxtjs/color-mode": "^3.3.3",
     "nuxt": "^3.11.0"
