--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
+    "@heroicons/vue": "^2.1.3",
     "@nuxt/content": "^2.12.1",
     "@nuxtjs/color-mode": "^3.3.3",
     "@vue-hero-icons/outline": "^1.7.2",
