--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nuxt": "^3.11.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.11.4"
+    "@nuxtjs/tailwindcss": "^6.11.4",
+    "@tailwindcss/typography": "^0.5.12"
   }
 }
