--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "nuxt": "^3.11.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/typography": "^0.5.12",
     "husky": "^9.0.11"
