--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@tailwindcss/typography": "^0.5.12",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "shiki": "^1.2.2"
   }
 }
